--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,14 +1,14 @@
 /**:
   # Global Parameters
   ros__parameters:
-    use_sim_time: true
-    tf_timeout_threshold: 0.1
+    use_sim_time: True
+    tf_timeout_threshold: 0.0
 
 /**:
   # Basic Robotics Functions
   platform:
     ros__parameters:
-      cmd_freq: 50.0  # Hz of platform commands send
+      cmd_freq: 100.0  # Hz of platform commands send
 
   # State Estimator
   state_estimator:
@@ -22,32 +22,94 @@
   # Motion Controller
   controller_manager:
     ros__parameters:
-      cmd_freq: 50.0 # Hz of controller commands send
+      cmd_freq: 100.0 # Hz of controller commands send
+      use_bypass: false
+      plugin_name: "differential_flatness_controller"
 
   # Behaviors Motion
   TakeoffBehavior:
     ros__parameters:
       # takeoff_plugin_name: "takeoff_plugin_speed"
-      takeoff_plugin_name: "takeoff_plugin_position"
-      # takeoff_plugin_name: "takeoff_plugin_trajectory"
+      # takeoff_plugin_name: "takeoff_plugin_position"
+      takeoff_plugin_name: "takeoff_plugin_trajectory"
   LandBehavior:
     ros__parameters:
-      land_plugin_name: "land_plugin_speed"
-      # land_plugin_name: "land_plugin_trajectory"
+      # land_plugin_name: "land_plugin_speed"
+      land_plugin_name: "land_plugin_trajectory"
   GoToBehavior:
     ros__parameters:
-      go_to_plugin_name: "go_to_plugin_position"
-      # go_to_plugin_name: "go_to_plugin_trajectory"
+      # go_to_plugin_name: "go_to_plugin_position"
+      go_to_plugin_name: "go_to_plugin_trajectory"
   FollowPathBehavior:
     ros__parameters:
-      follow_path_plugin_name: "follow_path_plugin_position"
-      # follow_path_plugin_name: "follow_path_plugin_trajectory"
+      # follow_path_plugin_name: "follow_path_plugin_position"
+      follow_path_plugin_name: "follow_path_plugin_trajectory"
 
-  # Behaviors Perception
-  point_gimbal_behavior:
+drone0:
+  # Motion Controller
+  controller_manager:
     ros__parameters:
-      behavior_timeout: 10.0
-      gimbal_name: gimbal
-      gimbal_frame_id: gimbal/_0/_1/_2
-      gimbal_base_frame_id: gimbal
-      gimbal_threshold: 0.01
+      # Differential Flatness Controller
+      mass: 1.03
+      trajectory_control:
+        antiwindup_cte: 1.0
+        alpha: 0.1
+        kp:
+          x: 2.65
+          y: 2.65
+          z: 2.65
+        ki:
+          x: 0.15
+          y: 0.15
+          z: 0.15
+        kd:
+          x: 1.35
+          y: 1.35
+          z: 1.35
+        roll_control:
+          kp: 5.5
+        pitch_control:
+          kp: 5.5
+        yaw_control:
+          kp: 5.5
+      # PID Controller
+      proportional_limitation: true
+      position_control:
+        reset_integral: false
+        antiwindup_cte: 0.5
+        alpha: 0.2
+        kp:
+          x: 1.0
+          y: 1.0
+          z: 1.0
+        kd:
+          x: 0.0
+          y: 0.0
+          z: 0.0
+        ki:
+          x: 0.01
+          y: 0.01
+          z: 0.01
+      trajectory_control:
+        reset_integral: false
+        antiwindup_cte : 1.0
+        alpha: 0.3
+        kp:
+          x: 0.4
+          y: 0.4
+          z: 0.4
+        kd:
+          x: 0.0001
+          y: 0.0001
+          z: 0.0001
+        ki:
+          x: 0.0
+          y: 0.0
+          z: 0.0
+      yaw_control:
+        reset_integral: false
+        antiwindup_cte : 1.0
+        alpha: 0.3
+        kp: 1.0
+        kd: 0.001
+        ki: 0.0
