--- a/tmuxinator/aerostack2.yaml
+++ b/tmuxinator/aerostack2.yaml
@@ -1,13 +1,5 @@
-<%
-# Input parameters
-drone_namespace        = @settings["drone_namespace"]
-simulation_config_file = @settings["simulation_config_file"]
-base_launch            = @settings["base_launch"] == "true"
-acro_control           = @settings["acro_control"]
-config_file            = @settings["config_file"]
-%>
-name: <%= drone_namespace %>
-attach: false
+name: drone0
+attach: true
 root: ./
 startup_window: mission_monitoring
 windows:
@@ -16,47 +8,27 @@ windows:
       layout: tiled
       panes:
       # Platform
-      <%- if base_launch %>
         - ros2 launch as2_gazebo_assets launch_simulation.py
           use_sim_time:=true
-          simulation_config_file:=<%= simulation_config_file %>
-      <%- end %>
-      <%- if acro_control %>
+          simulation_config_file:=config/world.yaml
         - ros2 launch as2_platform_gazebo platform_gazebo_launch.py
-            namespace:=<%= drone_namespace %>
-            platform_config_file:=<%= config_file %>
-            simulation_config_file:=<%= simulation_config_file %>
-            control_modes_file:=config/control_modes_acro.yaml
-      <%- else %>
-        - ros2 launch as2_platform_gazebo platform_gazebo_launch.py
-            namespace:=<%= drone_namespace %>
+            namespace:=drone0
             platform_config_file:=config/config.yaml
-            simulation_config_file:=<%= simulation_config_file %>
-      <%- end %>
+            simulation_config_file:=config/world.yaml
+            control_modes_file:=config/platform_control_modes.yaml
 
   # Basic Robotics Functions
-  - basics_robotics_functions:
-      layout:
+  - BRF:
+      layout: tiled
       panes:
         # State Estimation
         - ros2 launch as2_state_estimator state_estimator_launch.py
-            namespace:=<%= drone_namespace %>
-            config_file:=<%= config_file %>
+            namespace:=drone0
+            config_file:=config/config.yaml
         # Motion Controller
-      <%- if acro_control %>
         - ros2 launch as2_motion_controller controller_launch.py
-            namespace:=<%= drone_namespace %>
-            config_file:=<%= config_file %>
-            plugin_name:=differential_flatness_controller
-            plugin_config_file:=config/differential_flatness_controller.yaml
-      <%- else %>
-        - ros2 launch as2_motion_controller controller_launch.py
-            namespace:=<%= drone_namespace %>
-            config_file:=<%= config_file %>
-            plugin_name:=pid_speed_controller
-            plugin_config_file:=config/pid_speed_controller.yaml
-      <%- end %>
-
+            namespace:=drone0
+            config_file:=config/config.yaml
 
   # Behaviors
   - behaviors:
@@ -64,30 +36,16 @@ windows:
       panes:
         # Motion Behaviors
         - ros2 launch as2_behaviors_motion motion_behaviors_launch.py
-            namespace:=<%= drone_namespace %>
-            config_file:=<%= config_file %>
+            namespace:=drone0
+            config_file:=config/config.yaml
         # Trajectory Generation Behavior
         - ros2 launch as2_behaviors_trajectory_generation generate_polynomial_trajectory_behavior_launch.py
-            namespace:=<%= drone_namespace %>
-            config_file:=<%= config_file %>
-        # Point Gimbal Behavior
-        - ros2 launch as2_behaviors_perception point_gimbal_behavior.launch.py
-            namespace:=<%= drone_namespace %>
-            config_file:=<%= config_file %>
-
-  # Mission execution
-  - mission_execution:
-      layout:
-      panes:
-        # Behavior tree
-        - ros2 launch as2_behavior_tree behavior_trees.launch.py
-            drone_id:=<%= drone_namespace %>
-            use_sim_time:=true
-            tree:=./trees/square.xml
+            namespace:=drone0
+            config_file:=config/config.yaml
 
   # Mission monitoring
   - mission_monitoring:
       layout: tiled
       panes:
         - ros2 run as2_alphanumeric_viewer as2_alphanumeric_viewer_node
-            --ros-args -r  __ns:=/<%= drone_namespace %>
+            --ros-args -r  __ns:=/drone0
