--- a/tmuxinator/ground_station.yaml
+++ b/tmuxinator/ground_station.yaml
@@ -1,41 +1,41 @@
 <%
 # Input parameters
-drone_namespace = @settings["drone_namespace"]
-keyboard_teleop = @settings["keyboard_teleop"] == "true"
-rviz            = @settings["rviz"] == "true"
-rosbag          = @settings["rosbag"] == "true"
+rviz         = @settings["rviz"] == "true"
+rosbag       = @settings["rosbag"] == "true"
+keyboard_teleoperation = @settings["keyboard_teleoperation"] == "true"
 %>
 
 name: ground_station
-attach: false
+attach: true
 root: ./
+startup_window: mission_monitoring
 windows:
-
-  # Mission monitoring
-  - mission_monitoring:
+  <%- if rviz %>
+  # RViz
+  - rviz:
       layout:
       panes:
-    <%- drone_namespace.split(',').each do |drone| %>
-        - ros2 run as2_alphanumeric_viewer as2_alphanumeric_viewer_node
-            --ros-args -r  __ns:=/<%= drone %>
-    <%- end %>
-        - echo Run here the mission
-
-  # Ground station
-  - ground_station:
-      layout:
-      panes:
-      <%- if keyboard_teleop %>
-        - ros2 launch as2_keyboard_teleoperation as2_keyboard_teleoperation_launch.py
-            namespace:=<%= drone_namespace %>
-      <%- end %>
-      <%- if rviz %>
         - ros2 launch as2_visualization swarm_viz.launch.py
-            namespace_list:=<%= drone_namespace %>
-            rviz_config:=config_ground_station/rviz2_config.rviz
-            drone_model:=x500
+            namespace_list:=drone0
+            rviz_config:=config/rviz2_config.rviz
+            drone_model:=quadrotor_base
             use_sim_time:=true
-      <%- end %>
-      <%- if rosbag %>
-        - ./rosbag/record_rosbag.bash <%= drone_namespace %>
-      <%- end %>
+  <%- end %>
+
+  <%- if rosbag %>
+  # ROSbag recording
+  - rosbag:
+      layout:
+      panes:
+        - ./rosbag/record_rosbag.bash drone0
+  <%- end %>
+
+  <%- if keyboard_teleoperation %>
+  # Keyboard teleoperation
+  - keyboard_teleop:
+      layout:
+      panes:
+        - ros2 launch as2_keyboard_teleoperation as2_keyboard_teleoperation_launch.py
+            namespace:=drone0
+            use_sim_time:=true
+  <%- end %>
