--- a/tmuxinator/aerostack2_follow_ref.yaml
+++ b/tmuxinator/aerostack2_follow_ref.yaml
@@ -10,12 +10,12 @@ windows:
       # Platform
         - ros2 launch as2_gazebo_assets launch_simulation.py
           use_sim_time:=true
-          simulation_config_file:=config/world.yaml
+          simulation_config_file:=config/world_follow_ref.yaml
           # headless:=true
         - ros2 launch as2_platform_gazebo platform_gazebo_launch.py
             namespace:=drone0
-            platform_config_file:=config/config.yaml
-            simulation_config_file:=config/world.yaml
+            platform_config_file:=config/config_follow_ref.yaml
+            simulation_config_file:=config/world_follow_ref.yaml
             control_modes_file:=config/platform_control_modes.yaml
 
   # Basic Robotics Functions
@@ -25,11 +25,11 @@ windows:
         # State Estimation
         - ros2 launch as2_state_estimator state_estimator_launch.py
             namespace:=drone0
-            config_file:=config/config.yaml
+            config_file:=config/config_follow_ref.yaml
         # Motion Controller
         - ros2 launch as2_motion_controller controller_launch.py
             namespace:=drone0
-            config_file:=config/config.yaml
+            config_file:=config/config_follow_ref.yaml
 
   # Behaviors
   - behaviors:
@@ -38,11 +38,11 @@ windows:
         # Motion Behaviors
         - ros2 launch as2_behaviors_motion motion_behaviors_launch.py
             namespace:=drone0
-            config_file:=config/config.yaml
+            config_file:=config/config_follow_ref.yaml
         # Trajectory Generation Behavior
-        - ros2 launch as2_behaviors_trajectory_generation generate_polynomial_trajectory_behavior_launch.py
+        - ros2 launch as2_behaviors_motion follow_reference_behavior_launch.py
             namespace:=drone0
-            config_file:=config/config.yaml
+            behavior_config_file:=config/config_follow_ref.yaml
 
   # Mission monitoring
   - mission_monitoring:
