--- a/tmuxinator/aerostack2.yaml
+++ b/tmuxinator/aerostack2.yaml
@@ -50,3 +50,4 @@ windows:
       panes:
         - ros2 run as2_alphanumeric_viewer as2_alphanumeric_viewer_node
             --ros-args -r  __ns:=/drone0
+        - python3 mission_trajectory.py
